--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -41,7 +41,7 @@
   <script>
     document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
   </script> <!-- For all browsers -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
   <meta http-equiv="cleartype" content="on"> <!-- start custom head snippets -->
   <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57b32b.html?v=M44lzPylqQ">
   <link rel="apple-touch-icon" sizes="60x60" href="images/apple-touch-icon-60x60b32b.html?v=M44lzPylqQ">
@@ -83,10 +83,10 @@
           <ul class="visible-links">
             <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a></li>
             <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
-            <li class="masthead__menu-item"><a href="pages/projects.html">Projects</a></li>
-            <li class="masthead__menu-item"><a href="pages/coursework.html">Coursework</a></li>
-            <li class="masthead__menu-item"><a href="pages/certifications.html">Certifications</a></li>
-            <li class="masthead__menu-item"><a href="/pages/samples.html">Work Samples</a></li>
+            <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
+            <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
+            <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
+            <li class="masthead__menu-item"><a href="../pages/samples.html">Work Samples</a></li>
           </ul>
           <ul class="hidden-links hidden"></ul>
         </nav>
@@ -96,7 +96,7 @@
   <div id="main" role="main">
     <div class="sidebar sticky">
       <div itemscope itemtype="http://schema.org/Person">
-        <div class="author__avatar"> <img src="images/me.jpg" class="author__avatar" alt="Don Lim">
+        <div class="author__avatar"> <img src="../images/me.jpg" class="author__avatar" alt="Don Lim">
         </div>
         <div class="author__content">
           <h3 class="author__name">Don Lim</h3>
@@ -107,7 +107,7 @@
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank"><i class="fa fa-fw fa-file-pdf"
+            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank"><i class="fa fa-fw fa-file-pdf"
                   aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
@@ -143,7 +143,20 @@
               }
             </style>
           </head>
-          <p><br /> I am an IT professional with a background in causal inference and economics. Currently, I am interested in machine learning and data modeling and prediction. <br /></p>
+          <p><h3>Python</h3><ul>
+            <li>Introduction to Data Science in Python (<a href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU">UHKNPYG352ZU</a>)</li>
+            <li>Applied Plotting, Charting & Data Representation in Python (<a href="https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8">MR6CRKMGMLF8</a>)</li>
+            <li>Applied Machine Learning in Python (<a href="https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN">V6RMP4DBA5XN</a>)</li>
+            <li>Applied Text Mining in Python (<a href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W">WXVAJP7YR94W</a>)</li>
+          </ul></p>
+          <p><h3>SQL</h3><ul>
+            <li>Introduction to Structured Query Language (SQL) (<a href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD">GA25HJ4B4XRD</a>)</li>
+          </ul>
+          </p>
+          <p><h3>Laserfiche</h3></p><ul>
+            <li>Gold</li>
+            <li>Platinum</li>
+          </ul>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
             ga('require', 'ipMeta', {
