--- a/pages/projects.html
+++ b/pages/projects.html
@@ -41,7 +41,7 @@
   <script>
     document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
   </script> <!-- For all browsers -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
   <meta http-equiv="cleartype" content="on"> <!-- start custom head snippets -->
   <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57b32b.html?v=M44lzPylqQ">
   <link rel="apple-touch-icon" sizes="60x60" href="images/apple-touch-icon-60x60b32b.html?v=M44lzPylqQ">
@@ -63,7 +63,7 @@
   <meta name="msapplication-TileImage" content="https://donlim93.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
   <meta name="msapplication-config" content="https://donlim93.github.io/images/browserconfig.xml?v=M44lzPylqQ">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="assets/css/academicons.css" />
+  <link rel="stylesheet" href="../assets/css/academicons.css" />
   <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
   </script>
   <script type="text/x-mathjax-config">
@@ -83,10 +83,10 @@
           <ul class="visible-links">
             <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a></li>
             <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
-            <li class="masthead__menu-item"><a href="pages/projects.html">Projects</a></li>
-            <li class="masthead__menu-item"><a href="pages/coursework.html">Coursework</a></li>
-            <li class="masthead__menu-item"><a href="pages/certifications.html">Certifications</a></li>
-            <li class="masthead__menu-item"><a href="/pages/samples.html">Work Samples</a></li>
+            <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
+            <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
+            <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
+            <li class="masthead__menu-item"><a href="../pages/samples.html">Work Samples</a></li>
           </ul>
           <ul class="hidden-links hidden"></ul>
         </nav>
@@ -96,7 +96,7 @@
   <div id="main" role="main">
     <div class="sidebar sticky">
       <div itemscope itemtype="http://schema.org/Person">
-        <div class="author__avatar"> <img src="images/me.jpg" class="author__avatar" alt="Don Lim">
+        <div class="author__avatar"> <img src="../images/me.jpg" class="author__avatar" alt="Don Lim">
         </div>
         <div class="author__content">
           <h3 class="author__name">Don Lim</h3>
@@ -106,9 +106,9 @@
           <ul class="author__urls social-icons">
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
-                  aria-hidden="true"></i> Email</a></li>
+                  aria-hidden="true"></i>Email</a></li>
             <li><a href="cv/LimDon_resumeCV.pdf" target="_blank"><i class="fa fa-fw fa-file-pdf"
-                  aria-hidden="true"></i> CV/Resume</a></li>
+                  aria-hidden="true"></i>CV/Resume</a></li>
           </ul>
         </div>
       </div>
@@ -143,7 +143,12 @@
               }
             </style>
           </head>
-          <p><br /> I am an IT professional with a background in causal inference and economics. Currently, I am interested in machine learning and data modeling and prediction. <br /></p>
+          <h3>Projects</h3> <ul>
+            <h4>Master's thesis submitted in partial requirement at the CEVRO Institute</h4>
+            <li><a href="research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
+              aria-hidden="true"></i>An Institutional Analysis on Open Source: How Developers
+              Use Knowledge and Entrepreneurship in Communities</a></li>
+          </ul> <br /></p>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
             ga('require', 'ipMeta', {
