--- a/pages/samples.html
+++ b/pages/samples.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
   <title>Don Lim | Portfolio</title>
   <meta property="og:locale" content="en-US">
   <meta property="og:site_name" content="Don Lim">
@@ -41,7 +41,7 @@
   <script>
     document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
   </script> <!-- For all browsers -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
   <meta http-equiv="cleartype" content="on"> <!-- start custom head snippets -->
   <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57b32b.html?v=M44lzPylqQ">
   <link rel="apple-touch-icon" sizes="60x60" href="images/apple-touch-icon-60x60b32b.html?v=M44lzPylqQ">
@@ -63,7 +63,7 @@
   <meta name="msapplication-TileImage" content="https://donlim93.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
   <meta name="msapplication-config" content="https://donlim93.github.io/images/browserconfig.xml?v=M44lzPylqQ">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="assets/css/academicons.css" />
+  <link rel="stylesheet" href="../assets/css/academicons.css" />
   <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
   </script>
   <script type="text/x-mathjax-config">
@@ -81,12 +81,13 @@
             <div class="navicon"></div>
           </button>
           <ul class="visible-links">
-            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a></li>
+            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a>
+            </li>
             <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
-            <li class="masthead__menu-item"><a href="pages/projects.html">Projects</a></li>
-            <li class="masthead__menu-item"><a href="pages/coursework.html">Coursework</a></li>
-            <li class="masthead__menu-item"><a href="pages/certifications.html">Certifications</a></li>
-            <li class="masthead__menu-item"><a href="/pages/samples.html">Work Samples</a></li>
+            <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
+            <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
+            <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
+            <li class="masthead__menu-item"><a href="../pages/samples.html">Work Samples</a></li>
           </ul>
           <ul class="hidden-links hidden"></ul>
         </nav>
@@ -96,18 +97,19 @@
   <div id="main" role="main">
     <div class="sidebar sticky">
       <div itemscope itemtype="http://schema.org/Person">
-        <div class="author__avatar"> <img src="images/me.jpg" class="author__avatar" alt="Don Lim">
+        <div class="author__avatar"> <img src="../images/me.jpg" class="author__avatar" alt="Don Lim">
         </div>
         <div class="author__content">
           <h3 class="author__name">Don Lim</h3>
-          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data Visualization</p>
+          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data
+            Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
           <ul class="author__urls social-icons">
-            <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
+            <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i> 806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank"><i class="fa fa-fw fa-file-pdf"
+            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank"><i class="fa fa-fw fa-file-pdf"
                   aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
@@ -143,7 +145,30 @@
               }
             </style>
           </head>
-          <p><br /> I am an IT professional with a background in causal inference and economics. Currently, I am interested in machine learning and data modeling and prediction. <br /></p>
+          <p><br />
+            <ul>
+              <li>
+                The World Bank - <a
+                  href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility">Global
+                  Database on Intergenerational Mobility</a> (GDIM) - [<a href="../sample/Data-sample.html"
+                  target="_blank" rel="noopener noreferrer">R</a>] <ul>
+                  <li>Clustering</li>
+                  <li>Choropleth graph</li>
+                  <li>Initial OLS</li>
+                </ul>
+              </li>
+              <li>
+                <a href="https://archive.ics.uci.edu/ml/datasets/Online%20Retail%20II">Retail Data Set II</a> Online
+                from Dr. Daqing Chen, School of Engineering, London South Bank University - [<a
+                  href="../sample/RFM_sample.html" target="_blank" rel="noopener noreferrer">R</a>] <ul>
+                  <li>RFM analysis</li>
+                  <li>Segmentation</li>
+                  <li>Clustering</li>
+                  <li>Retention and lifetime value analysis</li>
+                </ul>
+              </li>
+            </ul> <br />
+          </p>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
             ga('require', 'ipMeta', {
