--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@
           <hr />
           <ul class="container2">
             <li>
-              The World Bank - <a href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility">Global Database on Intergenerational Mobility</a> (GDIM) - [<a href="sample/Data-sample.html">R</a>]
+              The World Bank - <a href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility">Global Database on Intergenerational Mobility</a> (GDIM) - [<a href="sample/Data-sample.html" target="_blank" rel="noopener noreferrer">R</a>]
             </li>
             <li>
-              <a href="https://archive.ics.uci.edu/ml/datasets/Online%20Retail%20II">Retail Data Set II</a> Online  from Dr. Daqing Chen, School of Engineering, London South Bank University - [<a href="sample/RFM_sample.html">R</a>]
+              <a href="https://archive.ics.uci.edu/ml/datasets/Online%20Retail%20II">Retail Data Set II</a> Online  from Dr. Daqing Chen, School of Engineering, London South Bank University - [<a href="sample/RFM_sample.html" target="_blank" rel="noopener noreferrer">R</a>]
             </li>
           </ul>
         </div>
