--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -99,7 +99,7 @@
         <div class="author__avatar"> <img src="../images/me.jpg" class="author__avatar" alt="Don Lim">
         </div>
         <div class="author__content">
-          <h3 class="author__name">Don Lim</h3>
+          <h2 class="author__name">Don Lim</h2>
           <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
@@ -143,17 +143,17 @@
               }
             </style>
           </head>
-          <p><h3>Python</h3><ul>
+          <p><h2>Python</h2><ul>
             <li>Introduction to Data Science in Python (<a href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU">UHKNPYG352ZU</a>)</li>
             <li>Applied Plotting, Charting & Data Representation in Python (<a href="https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8">MR6CRKMGMLF8</a>)</li>
             <li>Applied Machine Learning in Python (<a href="https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN">V6RMP4DBA5XN</a>)</li>
             <li>Applied Text Mining in Python (<a href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W">WXVAJP7YR94W</a>)</li>
           </ul></p>
-          <p><h3>SQL</h3><ul>
+          <p><h2>SQL</h2><ul>
             <li>Introduction to Structured Query Language (SQL) (<a href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD">GA25HJ4B4XRD</a>)</li>
           </ul>
           </p>
-          <p><h3>Laserfiche</h3></p><ul>
+          <p><h2>Laserfiche</h2></p><ul>
             <li>Gold</li>
             <li>Platinum</li>
           </ul>
@@ -214,6 +214,8 @@
       <div class="page__footer-follow">
         <ul class="social-icons">
           <li><strong>Follow:</strong></li>
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          </li>
           <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
         </ul>
