--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -163,7 +163,7 @@
                   Class presentation: The Market (Israel Kirzner, <i>Market Theory and the Price System</i>, Ch. 2; Murray Rothbard, <i>Man, Economy, and State</i>, Ch. 2) - [<a href="coursework/spring 2022/BECO 5376 - Austrian Economics/presentation.pdf" target="_blank" rel="noopener noreferrer"]>PDF</a>]
                 </li>
               </ul>
-            </div>
+            </div> <br />
             <h2>Fall 2021</h2>
             <div class="border">
               <h3>AAEC 5301 Institutional Analysis</h3>
@@ -303,7 +303,7 @@
                   >]
                 </li>
               </ul>
-            </div>
+            </div> <br />
             <h2>Spring 2021</h2>
             <div class="border">
               <h3>AAEC 5303 Applied Econometrics II</h3>
@@ -384,7 +384,7 @@
                   >]
                 </li>
               </ul>
-            </div>
+            </div> <br />
             <h2>Fall 2020</h2>
             <div class="border">
               <h3>AAEC 5307 Applied Econometrics I</h3>
@@ -511,6 +511,8 @@
       <div class="page__footer-follow">
         <ul class="social-icons">
           <li><strong>Follow:</strong></li>
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          </li>
           <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
         </ul>
