--- a/pages/projects.html
+++ b/pages/projects.html
@@ -99,7 +99,7 @@
         <div class="author__avatar"> <img src="../images/me.jpg" class="author__avatar" alt="Don Lim">
         </div>
         <div class="author__content">
-          <h3 class="author__name">Don Lim</h3>
+          <h2 class="author__name">Don Lim</h2>
           <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
@@ -107,7 +107,7 @@
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i>Email</a></li>
-            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank"><i class="fa fa-fw fa-file-pdf"
+            <li><a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
                   aria-hidden="true"></i>CV/Resume</a></li>
           </ul>
         </div>
@@ -143,11 +143,17 @@
               }
             </style>
           </head>
-          <h3>Projects</h3> <ul>
-            <h4>Master's thesis submitted in partial requirement at the CEVRO Institute</h4>
+          <h2>Projects</h2> <ul>
+            <h3>Master's thesis submitted in partial requirement at the CEVRO Institute</h3>
             <li><a href="research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
               aria-hidden="true"></i>An Institutional Analysis on Open Source: How Developers
-              Use Knowledge and Entrepreneurship in Communities</a></li>
+              Use Knowledge and Entrepreneurship in Communities</a></li><br />
+            <h3>Professional paper submitted in partial requirement at Texas Tech University</h3>
+            <li><a href="../research/fbdg/FBDG_final.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Low-Fat Diet on Global Health Outcomes&#8212A Two-Stage
+              Difference-in-Difference</a></li><ul>
+                <li><a href="../research/fbdg/presentation.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Presentation</a> </li>
+                <li>Data cleaning code [<a href="../research/fbdg/data_clean.Rmd" target="_blank" rel="noopener noreferrer">R</a>]</li>
+              </ul>
           </ul> <br /></p>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
@@ -206,7 +212,9 @@
       <div class="page__footer-follow">
         <ul class="social-icons">
           <li><strong>Follow:</strong></li>
-          <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          </li>
+          <li><a href="https://github.com/donlim93" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
         </ul>
       </div>
