--- a/pages/samples.html
+++ b/pages/samples.html
@@ -146,10 +146,10 @@
             </style>
           </head>
           <p><br />
-            <ul>
+            <h2>R</h2>
               <li>
                 The World Bank - <a
-                  href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility">Global
+                  href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility" target="_blank" rel="noopener noreferrer">Global
                   Database on Intergenerational Mobility</a> (GDIM) - [<a href="../sample/Data-sample.html"
                   target="_blank" rel="noopener noreferrer">R</a>] <ul>
                   <li>Clustering</li>
@@ -158,7 +158,7 @@
                 </ul>
               </li>
               <li>
-                <a href="https://archive.ics.uci.edu/ml/datasets/Online%20Retail%20II">Retail Data Set II</a> Online
+                <a href="https://archive.ics.uci.edu/ml/datasets/Online%20Retail%20II" target="_blank" rel="noopener noreferrer">Retail Data Set II</a> Online
                 from Dr. Daqing Chen, School of Engineering, London South Bank University - [<a
                   href="../sample/RFM_sample.html" target="_blank" rel="noopener noreferrer">R</a>] <ul>
                   <li>RFM analysis</li>
@@ -168,6 +168,10 @@
                 </ul>
               </li>
             </ul> <br />
+            <h2>Python</h2>
+            <ul>
+              <li><a href="../python/Coursera/1 Intro to Data Science/Assignments/Assignment 1/assignment1.ipynb">Python</a></li>
+            </ul>
           </p>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
@@ -225,6 +229,8 @@
       </script>
       <div class="page__footer-follow">
         <ul class="social-icons">
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          </li>
           <li><strong>Follow:</strong></li>
           <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
