--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
               <section>
             </div>
           <div id="education" class="education">
+            Link to new website: <a href="index_new.html">Here</a>
             <br>
             <br>
             <h1>Education</h1>
