--- a/index_new.html
+++ b/index_new.html
@@ -201,6 +201,8 @@
       <div class="page__footer-follow">
         <ul class="social-icons">
           <li><strong>Follow:</strong></li>
+          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+          </li>
           <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
         </ul>
