--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
               <section>
             </div>
           <div id="education" class="education">
-            Link to new website: <a href="index_new.html">Here</a>
+            Link to new website: <a href="index_new.html">Here</a> (Work in progress)
             <br>
             <br>
             <h1>Education</h1>
