--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -107,7 +107,7 @@
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank"><i class="fa fa-fw fa-file-pdf"
+            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
                   aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
@@ -144,18 +144,18 @@
             </style>
           </head>
           <p><h2>Python</h2><ul>
-            <li>Introduction to Data Science in Python (<a href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU">UHKNPYG352ZU</a>)</li>
-            <li>Applied Plotting, Charting & Data Representation in Python (<a href="https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8">MR6CRKMGMLF8</a>)</li>
-            <li>Applied Machine Learning in Python (<a href="https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN">V6RMP4DBA5XN</a>)</li>
-            <li>Applied Text Mining in Python (<a href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W">WXVAJP7YR94W</a>)</li>
+            <li>Sep 2022 - Introduction to Data Science in Python (<a href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU" target="_blank" rel="noopener noreferrer">UHKNPYG352ZU</a>)</li>
+            <li>Oct 2022 - Applied Plotting, Charting & Data Representation in Python (<a href="https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8" target="_blank" rel="noopener noreferrer">MR6CRKMGMLF8</a>)</li>
+            <li>Nov 2022 - Applied Machine Learning in Python (<a href="https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN" target="_blank" rel="noopener noreferrer">V6RMP4DBA5XN</a>)</li>
+            <li>Dec 2022 - Applied Text Mining in Python (<a href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W" target="_blank" rel="noopener noreferrer">WXVAJP7YR94W</a>)</li>
           </ul></p>
           <p><h2>SQL</h2><ul>
-            <li>Introduction to Structured Query Language (SQL) (<a href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD">GA25HJ4B4XRD</a>)</li>
+            <li>Dec 2021 - Introduction to Structured Query Language (SQL) (<a href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD" target="_blank" rel="noopener noreferrer">GA25HJ4B4XRD</a>)</li>
           </ul>
           </p>
           <p><h2>Laserfiche</h2></p><ul>
-            <li>Gold</li>
-            <li>Platinum</li>
+            <li>Jun 2022 - <a href="../certs/LF_gold.pdf" target="_blank" rel="noopener noreferrer">Gold</a> </li>
+            <li>Oct 20022 - <a href="../certs/LF_plat.pdf" target="_blank" rel="noopener noreferrer">Platinum</a></li>
           </ul>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
@@ -240,6 +240,5 @@
   </script>
   <script src="js/scroll.js"></script>
 </body>
-<!-- Mirrored from psantanna.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 13 Jan 2023 15:17:43 GMT -->
 
 </html>
