--- a/pages/projects.html
+++ b/pages/projects.html
@@ -143,18 +143,18 @@
               }
             </style>
           </head>
-          <h2>Projects</h2> <ul>
-            <h3>Master's thesis submitted in partial requirement at the CEVRO Institute</h3>
-            <li><a href="research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
+          <h2>Projects</h2> <br />
+            <h3>Master's thesis submitted in partial requirement at the CEVRO Institute</h3> <br />
+            <a href="research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
               aria-hidden="true"></i>An Institutional Analysis on Open Source: How Developers
-              Use Knowledge and Entrepreneurship in Communities</a></li><br />
-            <h3>Professional paper submitted in partial requirement at Texas Tech University</h3>
-            <li><a href="../research/fbdg/FBDG_final.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Low-Fat Diet on Global Health Outcomes&#8212A Two-Stage
-              Difference-in-Difference</a></li><ul>
+              Use Knowledge and Entrepreneurship in Communities</a><br /> <br />
+            <h3>Professional paper submitted in partial requirement at Texas Tech University</h3> <br />
+            <a href="../research/fbdg/FBDG_final.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Low-Fat Diet on Global Health Outcomes&#8212A Two-Stage
+              Difference-in-Difference</a> <ul>
                 <li><a href="../research/fbdg/presentation.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>Presentation</a> </li>
                 <li>Data cleaning code [<a href="../research/fbdg/data_clean.Rmd" target="_blank" rel="noopener noreferrer">R</a>]</li>
               </ul>
-          </ul> <br /></p>
+           <br /></p>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
             ga('require', 'ipMeta', {
@@ -238,6 +238,5 @@
   </script>
   <script src="js/scroll.js"></script>
 </body>
-<!-- Mirrored from psantanna.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 13 Jan 2023 15:17:43 GMT -->
 
 </html>
