--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -107,7 +107,7 @@
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
-            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank"><i class="fa fa-fw fa-file-pdf"
+            <li><a href="../cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-file-pdf"
                   aria-hidden="true"></i> CV/Resume</a></li>
           </ul>
         </div>
@@ -537,6 +537,5 @@
   </script>
   <script src="js/scroll.js"></script>
 </body>
-<!-- Mirrored from psantanna.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 13 Jan 2023 15:17:43 GMT -->
 
 </html>
