--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8"> 
   <title>Don Lim | Portfolio</title>
+  <link rel="icon" href="photos/me.jpg" type="image/x-icon" />
   <meta property="og:locale" content="en-US">
   <meta property="og:site_name" content="Don Lim">
   <meta property="og:title" content="Don Lim">
